// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getSection: article abrogé ne doit pas apparaitre 1`] = `
Object {
  "children": Array [],
  "data": Object {
    "cid": "LEGITEXT000006071367",
    "commentaire": null,
    "dossier": "code_en_vigueur",
    "id": "LEGISCTA000029978970",
    "mtime": 1514576002,
    "parent": "LEGISCTA000032717981",
    "titre_ta": "Section 2 : Dispositions particulières à l'île de Clipperton",
  },
  "type": "section",
}
`;

exports[`getSection: article en vigueur doit apparaitre 1`] = `
Object {
  "children": Array [
    Object {
      "children": undefined,
      "data": Object {
        "bloc_textuel": "Pour l'application du 4° de l'article L. 2151-1, une organisation professionnelle d'employeurs issue de la fusion d'organisations professionnelles d'employeurs préexistantes peut se prévaloir de l'ancienneté acquise antérieurement à la fusion par la plus ancienne de ces dernières dans le champ professionnel et géographique correspondant au niveau pour lequel la représentativité est demandée.",
        "cid": "LEGITEXT000006072050",
        "date_debut": 2015-06-13T22:00:00.000Z,
        "date_fin": 2016-10-22T22:00:00.000Z,
        "dossier": "code_en_vigueur",
        "etat": "MODIFIE",
        "id": "LEGIARTI000030730068",
        "mtime": 1477335569,
        "nota": "",
        "num": "R2151-1",
        "parent": "LEGISCTA000030730058",
        "position": 0,
        "section": "LEGISCTA000030730058",
        "titre_ta": "Article R2151-1",
        "type": "AUTONOME",
      },
      "type": "article",
    },
  ],
  "data": Object {
    "cid": "LEGITEXT000006072050",
    "commentaire": null,
    "dossier": "code_en_vigueur",
    "id": "LEGISCTA000030730058",
    "mtime": 1477335586,
    "parent": "LEGISCTA000030730052",
    "titre_ta": "Chapitre Ier : Critères de représentativité &#13;
&#13;
&#13;
&#13;
&#13;
",
  },
  "type": "section",
}
`;

exports[`getSection: article pas encore en vigueur ne doit pas apparaitre 1`] = `
Object {
  "children": Array [],
  "data": Object {
    "cid": "LEGITEXT000006072050",
    "commentaire": null,
    "dossier": "code_en_vigueur",
    "id": "LEGISCTA000030730058",
    "mtime": 1477335586,
    "parent": "LEGISCTA000030730052",
    "titre_ta": "Chapitre Ier : Critères de représentativité &#13;
&#13;
&#13;
&#13;
&#13;
",
  },
  "type": "section",
}
`;
